--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -1,17 +1,11 @@
 .forms {
-  width: 100vw;
-  height: 100vh;
-  /* background-image: linear-gradient(#3b8beb, #c4dbf6); */
-  background-color: #c4dbf6;
-  color: black;
-  overflow: hidden;
+  width: 100%;
+  background-color: darkgray;
 }
 
 .form-fields {
-  /* background-color: #8590AA; */
   width: 80%;
-  margin: 0 auto;
-  padding: 1% 0;
+  margin: auto;
   justify-content: center;
   align-items: center;
   vertical-align: middle;
@@ -22,15 +16,15 @@
   display: flex;
   flex-wrap: wrap;
   width: 50%;
-  margin: 0 auto;
+  margin: auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 25px;
+  font-size: 1rem;
   border: 0;
   color: black;
-  padding: 5px 1%;
-  border-radius: 8px;
+  padding: 1%;
+  border-radius: 10%;
 }
 
 .form-fields .labels {
@@ -63,22 +57,12 @@
 }
 
 .form-fields .buttons:hover {
-  box-shadow: 10px 10px 15px #8590aa;
-}
-
-@media only screen and (max-width: 600px) {
-  .form-fields button {
-    font-size: 1rem;
-    width: 20%;
-  }
+  box-shadow: 1rem 1rem 1.5rem #8590aa;
+  cursor: pointer;
 }
 
 .calendar {
-  display: flex;
-  /* justify-content: center; */
-  font-size: 1.5rem;
   font-weight: 700;
   padding: 0 24%;
-  align-items: center;
-  margin: 1rem auto;
+  margin: auto;
 }
