--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -27,6 +27,21 @@
   border-radius: 10%;
 }
 
+.form-fields .password-inputs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 24%;
+  width: 50%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  border: 0;
+  color: black;
+  padding: 1%;
+  border-radius: 10%;
+}
+
 .form-fields .labels {
   display: flex;
   /* justify-content: center; */
