--- a/src/style/forms.css
+++ b/src/style/forms.css
@@ -1,6 +1,8 @@
 .forms {
   width: 100%;
   background-color: darkgray;
+  padding: 1rem;
+  padding-top: 0.5em;
 }
 
 .form-fields {
@@ -16,7 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 50%;
-  margin: auto;
+  margin-left: 22.5%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -45,21 +47,6 @@
   width: 4rem;
 }
 
-.form-fields .password-inputs {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: 24%;
-  width: 50%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1rem;
-  border: 0;
-  color: black;
-  padding: 1%;
-  border-radius: 10%;
-}
-
 .form-fields .labels {
   display: flex;
   /* justify-content: center; */
@@ -83,7 +70,8 @@
   background-color: #c4dbf6;
   color: black;
   font-weight: 600;
-  margin: 0 auto;
+  margin: auto;
+  margin-top: 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
