--- a/src/style/speech-bubble.css
+++ b/src/style/speech-bubble.css
@@ -1,16 +1,16 @@
 .speech-bubble {
 	position: relative;
     background: #ff0002;
-    border-radius: .4em;
-    width: 25em;
-    height: 1em;
+	border-radius: .4%;
+	min-width: 15rem;
+    width: 25%;
+    height: 1rem;
     margin: auto;
-    margin-bottom: auto;
-    margin-bottom: 1.4em;
-    margin-top: 1.4em;
+    margin-bottom: 0;
+    margin-top: 1rem;
     text-align: center;
     top: 50%;
-    padding: 2em;
+    padding: 2rem;
 }
 
 .speech-bubble:after {
