--- a/src/style/cropper.scss
+++ b/src/style/cropper.scss
@@ -4,7 +4,7 @@ $danger: #dc3545;
 
 /******************no SelectAndCrop styles*****************/
 .container {
-  margin: 100px auto;
+  margin: auto;
   text-align: center;
   width: calc(100% - 1rem);
 }
@@ -237,11 +237,11 @@ form {
 
   span {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
     border-radius: 100%;
-    background-color: #3498db;
-    margin: 35px 5px;
+    background-color: gray;
+    margin: 2rem 0.5rem;
 
     &:nth-child(1) {
       animation: bounce 1s ease-in-out infinite;
